fixed homelessness component on tablet

--- a/src/page-sections/home/dts-tile/landing-dts.scss
+++ b/src/page-sections/home/dts-tile/landing-dts.scss
@@ -87,9 +87,14 @@ hr.horizontal_dts{
 @media only screen and (max-width: $desktop-xl) {
 
   .dts-module {
-    width: 80%;
+    width: 100%;
+    text-align: center;
   }
-  
+
+  .dtsm-right-column {
+    text-align: left;
+  }
+
   .dtsm-dollars {
     font-size: 1.8em;
   }
