--- a/src/page-sections/home/secondary-tile/stacked-layout/secondary-tile.module.scss
+++ b/src/page-sections/home/secondary-tile/stacked-layout/secondary-tile.module.scss
@@ -53,5 +53,12 @@
   }
 }
 
+@media screen and (max-width: $desktop-xl) {
+  .highlight {
+    border: none;
+  }
+}
+
+
 
 
